{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 471,
  "lineage": "6d98eb4f-f510-f3b1-9cc0-4bf88365a965",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "api",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/personalhub14/regions/us-central1/networkEndpointGroups/api-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "request_coalescing": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-23T12:46:15.350-07:00",
            "enable_cdn": true,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "2E6j1USucUA=",
            "generated_id": 3562045664176378344,
            "id": "projects/personalhub14/global/backendServices/api-backend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "api-backend",
            "port_name": "http",
            "project": "personalhub14",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/api-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_grafana",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.datalake.google_storage_bucket.grafana_bucket",
            "module.iam.google_service_account.fastapi_run_sa",
            "module.iam.google_service_account.grafana_run_sa",
            "module.iam.google_service_account.portfolio_run_sa",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "grafana",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/personalhub14/regions/us-central1/networkEndpointGroups/grafana-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "request_coalescing": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-23T15:56:52.768-07:00",
            "enable_cdn": true,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "Tht0rTGu_WI=",
            "generated_id": 3130886421455594843,
            "id": "projects/personalhub14/global/backendServices/grafana-backend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "grafana-backend",
            "port_name": "http",
            "project": "personalhub14",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/grafana-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_grafana",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.datalake.google_storage_bucket.grafana_bucket",
            "module.iam.google_service_account.fastapi_run_sa",
            "module.iam.google_service_account.grafana_run_sa",
            "module.iam.google_service_account.portfolio_run_sa",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "rstudio",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/personalhub14/regions/us-central1/networkEndpointGroups/rstudio-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "request_coalescing": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-23T12:46:14.779-07:00",
            "enable_cdn": true,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "DpBfXQQ9UaU=",
            "generated_id": 769937908092375529,
            "id": "projects/personalhub14/global/backendServices/rstudio-backend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "rstudio-backend",
            "port_name": "http",
            "project": "personalhub14",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/rstudio-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_grafana",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.datalake.google_storage_bucket.grafana_bucket",
            "module.iam.google_service_account.fastapi_run_sa",
            "module.iam.google_service_account.grafana_run_sa",
            "module.iam.google_service_account.portfolio_run_sa",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "www",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/personalhub14/regions/us-central1/networkEndpointGroups/www-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "request_coalescing": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-06-23T11:38:17.731-07:00",
            "enable_cdn": true,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "U9NRZaP7TlI=",
            "generated_id": 3823040969804358134,
            "id": "projects/personalhub14/global/backendServices/www-backend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "optional_mode": "EXCLUDE_ALL_OPTIONAL",
                "sample_rate": 1
              }
            ],
            "name": "www-backend",
            "port_name": "http",
            "project": "personalhub14",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/www-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_grafana",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.datalake.google_storage_bucket.grafana_bucket",
            "module.iam.google_service_account.fastapi_run_sa",
            "module.iam.google_service_account.grafana_run_sa",
            "module.iam.google_service_account.portfolio_run_sa",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "cloudsql_peering_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.86.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-06-23T11:38:58.955-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/personalhub14/global/addresses/cloudsql-peering-range",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "cloudsql-peering-range",
            "network": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/networks/vpc-net",
            "prefix_length": 16,
            "project": "personalhub14",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/addresses/cloudsql-peering-range",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.95.96.202",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-23T11:38:15.116-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/personalhub14/global/addresses/lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "lb-ip",
            "prefix_length": 0,
            "project": "personalhub14",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/addresses/lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 1611564048555712961,
            "id": "projects/personalhub14/global/forwardingRules/http-forwarding-rule",
            "ip_address": "34.95.96.202",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "personalhub14",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/forwardingRules/http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/targetHttpProxies/http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_global_address.lb_ip",
            "module.network.google_compute_target_http_proxy.http_proxy",
            "module.network.google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 1017535458377474471,
            "id": "projects/personalhub14/global/forwardingRules/https-forwarding-rule",
            "ip_address": "34.95.96.202",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "https-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "personalhub14",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/forwardingRules/https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/targetHttpsProxies/https-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_grafana",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.datalake.google_storage_bucket.grafana_bucket",
            "module.iam.google_service_account.fastapi_run_sa",
            "module.iam.google_service_account.grafana_run_sa",
            "module.iam.google_service_account.portfolio_run_sa",
            "module.network.google_compute_backend_service.backend",
            "module.network.google_compute_global_address.lb_ip",
            "module.network.google_compute_managed_ssl_certificate.ssl_certs",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_compute_target_https_proxy.https_proxy",
            "module.network.google_compute_url_map.url_map",
            "module.network.google_vpc_access_connector.run_connector"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/personalhub14/global/networks/vpc-net",
            "mtu": 0,
            "name": "vpc-net",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3348074112931340792",
            "numeric_id": "3348074112931340792",
            "project": "personalhub14",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/networks/vpc-net"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-23T11:38:59.092-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.8.0.1",
            "id": "projects/personalhub14/regions/us-central1/subnetworks/vpc-subnet",
            "ip_cidr_range": "10.8.0.0/28",
            "name": "vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/networks/vpc-net",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "personalhub14",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/regions/us-central1/subnetworks/vpc-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2450442556705874348
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_net"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-23T11:38:26.937-07:00",
            "fingerprint": "Tt9naW5aV58=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/personalhub14/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "personalhub14",
            "proxy_bind": false,
            "proxy_id": 8816543675266113997,
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/urlMaps/http-redirect"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_url_map.http_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-23T11:38:52.082-07:00",
            "fingerprint": "Y1j0CnQDtrk=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/personalhub14/global/targetHttpsProxies/https-proxy",
            "name": "https-proxy",
            "project": "personalhub14",
            "proxy_bind": false,
            "proxy_id": 6097786414340252115,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/targetHttpsProxies/https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/personalhub14/global/sslCertificates/ssl-certs"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/urlMaps/url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_grafana",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.datalake.google_storage_bucket.grafana_bucket",
            "module.iam.google_service_account.fastapi_run_sa",
            "module.iam.google_service_account.grafana_run_sa",
            "module.iam.google_service_account.portfolio_run_sa",
            "module.network.google_compute_backend_service.backend",
            "module.network.google_compute_managed_ssl_certificate.ssl_certs",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_compute_url_map.url_map",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-23T11:38:15.151-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "KVV1y6BTz48=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/personalhub14/global/urlMaps/http-redirect",
            "map_id": 471375013152563704,
            "name": "http-redirect",
            "path_matcher": [],
            "project": "personalhub14",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/urlMaps/http-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-23T11:38:40.176-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/www-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "iekPa-zIIO8=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "api.guigo.dev.br"
                ],
                "path_matcher": "api-matcher"
              },
              {
                "description": "",
                "hosts": [
                  "grafana.guigo.dev.br"
                ],
                "path_matcher": "grafana-matcher"
              },
              {
                "description": "",
                "hosts": [
                  "rstudio.guigo.dev.br"
                ],
                "path_matcher": "rstudio-matcher"
              },
              {
                "description": "",
                "hosts": [
                  "www.guigo.dev.br"
                ],
                "path_matcher": "www-matcher"
              }
            ],
            "id": "projects/personalhub14/global/urlMaps/url-map",
            "map_id": 6062200269535715807,
            "name": "url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/www-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "www-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/www-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/api-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "api-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/api-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/rstudio-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "rstudio-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/rstudio-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/grafana-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "grafana-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/backendServices/grafana-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "personalhub14",
            "self_link": "https://www.googleapis.com/compute/v1/projects/personalhub14/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.google_cloud_run_v2_service.run_fastapi",
            "module.compute.google_cloud_run_v2_service.run_grafana",
            "module.compute.google_cloud_run_v2_service.run_portfolio",
            "module.compute.google_cloud_run_v2_service.run_rstudio",
            "module.datalake.google_storage_bucket.grafana_bucket",
            "module.iam.google_service_account.fastapi_run_sa",
            "module.iam.google_service_account.grafana_run_sa",
            "module.iam.google_service_account.portfolio_run_sa",
            "module.network.google_compute_backend_service.backend",
            "module.network.google_compute_network.vpc_net",
            "module.network.google_compute_region_network_endpoint_group.neg_region",
            "module.network.google_vpc_access_connector.run_connector"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}